[project]
name = "snusbase.py"
version = "1.0.2"
description = "an un-official async wrapper for the Snusbase API"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
keywords = ["snusbase", "osint"]
authors = [{ name = "igna", email = "igna@shiro.wtf" }]
maintainers = [{ name = "igna", email = "igna@shiro.wtf" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["httpx>=0.24.1", "orjson>=3.9.2"]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://snusbase.com"
"Bug Reports" = "https://github.com/obstructive/snusbase.py/issues"
"Source" = "https://github.com/obstructive/snusbase.py"


[project.scripts]
sample = "sample:main"


[tool.setuptools]
package-data = { "sample" = ["*.dat"] }

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
